Set footer fixed position, color boarders for visualizing, align and improve containers for flexing with viewport

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
 #root {
-  margin: 5px;
-  padding: 20px;
+  margin: 0 auto;
+  padding: 10px;
   border: 3px solid rgb(28, 0, 242);
-  margin: 5px;
+  left: 0;
+  min-height: 100vh;
+  max-width: 80vh;
   display: flex;
 }
 
 .content {
-  padding-top: 80px; 
+  margin: 0 auto;
+  border: 2px solid rgb(255, 0, 208);
+  max-width: 80vh;
+  justify-content: center;
+  padding: 10px;
   display: flex;
-  border: 2px solid black;
-  margin-top:70px;
-  height: 100vh;
-  max-width:1275px;
-  width: 80vh;  
-  padding: 20px;
+ 
+}
 
-  }
