--- a/src/Header.css
+++ b/src/Header.css
@@ -7,7 +7,7 @@
   top:5px;
   box-shadow: 0px 8px 30px 10px rgba(0, 0, 0, 0.2);
   padding: 5px;
-  max-width: 1280px;
+
   
   
 }
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1280px;
+  
   border: 2pt solid yellow;
   
   
@@ -35,6 +35,7 @@
   padding: 10px 20px;
   cursor: pointer;
   margin: 5px;
+  display: flex;
   transition: background-color 0.3s ease;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
 }
@@ -87,7 +88,8 @@
   height: 40px;
   margin: 3px 0;
   border: 1px solid rgb(0, 0, 0);
-  padding: 10px
+  padding: 10px;
+  justify-content: center;
 
 }
 
