--- a/src/index/CSS/PhotosIndex.css
+++ b/src/index/CSS/PhotosIndex.css
@@ -1,4 +1,4 @@
-.container-wrapper {
+/* .container-wrapper {
   max-width: 100vh; 
   overflow-x: auto; 
   border: 2px solid rgb(255, 255, 255);
@@ -18,7 +18,7 @@
 
 .photo-item {
   padding: 3px
-}
+} */
 
 .pet-thumbnail {
   width: 100px;
